Change link to top position to avoid overlapping

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -469,11 +469,11 @@ a {
 .link-to-top {
   background: rgba(226, 226, 226, 0.5);
   border-radius: rem-calc(6);
-  bottom: 48px;
+  bottom: 12px;
   display: table;
   height: rem-calc(48);
   position: fixed;
-  right: 48px;
+  right: 24px;
   width: rem-calc(48);
 
   a {
